# home-assitant

./: .gitignore  Dockerfile.client  Dockerfile.mcp  Dockerfile.server  README.md  docker-compose.test.yml  docker-compose.yml  env.example  pyproject.toml  ruff-results.sarif  ruff.sh
.github/workflows/: ruff.yml
.github/workspace/: ruff.yml
src/home_ai/: __init__.py  ruff_test_example.py  ruff_test_example2.py  test_ruff_violations.py
src/home_ai/client/: __init__.py  api_client.py  assistant.py  audio.py
src/home_ai/common/: __init__.py  config.py  models.py
src/home_ai/common/interfaces/: __init__.py  iot.py  llm.py  stt.py  tts.py
src/home_ai/common/stt/: __init__.py  google_stt.py  openai_stt.py
src/home_ai/common/tts/: __init__.py  gtts_impl.py  openai_tts.py
src/home_ai/logging/: __init__.py  db_logger.py  file_logger.py  models.py
src/home_ai/mcp_iot/: __init__.py  server.py
src/home_ai/mcp_iot/devices/: __init__.py  alarm.py  base.py  light.py  thermostat.py
src/home_ai/server/: __init__.py  app.py
src/home_ai/server/api/: __init__.py  rest.py  websocket.py
src/home_ai/server/db/: __init__.py  connection.py  models.py
tests/: __init__.py  conftest.py
tests/client/: __init__.py  test_client.py
tests/common/: __init__.py  test_interfaces.py  test_models.py  test_stt.py  test_tts.py
tests/e2e/: test_full_flow.py
tests/logging/: __init__.py  test_db_logger.py  test_file_logger.py
tests/mcp_iot/: __init__.py  test_devices.py  test_mcp_server.py
tests/server/: __init__.py  test_api.py  test_db.py  test_llm.py
(+3 files in other folders)
